@@ -66,9 +66,12 @@ stringmap read_config_file(const char *f) {
 
                 if (r >= value) {
                     item *I;
-                    if ((I = stringmap_insert(S, key, item_ptr(strdup(value))))) {
+
+                    /* Check that this is a valid key. */
+                    if (!is_cfgdirective_valid(key))
+                        fprintf(stderr, "%s:%d: warning: unknown directive `%s'\n", f, i, key);
+                    else if ((I = stringmap_insert(S, key, item_ptr(strdup(value)))))
                         fprintf(stderr, "%s:%d: warning: repeated directive `%s'\n", f, i, key);
-                    }
                 }
             }
         }
